--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -18,16 +18,35 @@ releases:
     namespace: ingress-nginx
     createNamespace: true
     chart: ingress-nginx/ingress-nginx
+    # values:
+    #   - nginx-ingress/values.yaml
     values:
-      - nginx-ingress/values.yaml
+      - enabled: true
+        controller:
+          admissionWebhooks:
+            enabled: false
+          service:
+            externalTrafficPolicy: "Local"
+            nodePorts:
+              http: 32080
+              https: 32443
+          config:
+            use-gzip: true
+            load-balance: ewma
+            enable-real-ip: true
+            max-worker-connections: 0
+            ssl-redirect: false
+            force-ssl-redirect: false
+            proxy-body-size: 10m
+  # kubectl patch svc nginx-ingress-ingress-nginx-controller -n ingress-nginx -p '{"spec":{"externalIPs":["192.168.100.51"]}}'
 
   # - name: metallb
   #   namespace: metallb-system
   #   createNamespace: true
   #   chart: metallb/metallb
   #   version: 0.15.0
-  #   values:
-  #     - ./metallb/values.yaml
+  #   # values:
+  #   #   - ./metallb/values.yaml
   # alternative: kubectl patch svc kong-kong-proxy -n kong -p '{"spec":{"externalIPs":["192.168.100.51"]}}'
 
   # - name: kong
@@ -38,20 +57,20 @@ releases:
   #   values:
   #     - kong/values.yaml
 
-  - name: postgres
-    namespace: dev
-    createNamespace: true
-    chart: ./postgres 
+  # - name: postgres
+  #   namespace: dev
+  #   createNamespace: true
+  #   chart: ./postgres 
   
-  - name: elastic
-    namespace: dev
-    createNamespace: true
-    chart: ./elastic 
+  # - name: elastic
+  #   namespace: dev
+  #   createNamespace: true
+  #   chart: ./elastic 
 
-  - name: kibana
-    namespace: dev
-    createNamespace: true
-    chart: ./kibana
+  # - name: kibana
+  #   namespace: dev
+  #   createNamespace: true
+  #   chart: ./kibana
 
   # - name: app
   #   namespace: app
