--- a/metallb/metallb-pool.yaml
+++ b/metallb/metallb-pool.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config: |
     address-pools:
-    - name: kong
+    - name: default
       protocol: layer2
       addresses:
-      - 192.168.100.51-192.168.100.60  # Range including desired IP
+      - 192.168.100.51-192.168.100.60
