--- a/nginx-ingress/values.yaml
+++ b/nginx-ingress/values.yaml
@@ -1,8 +1,9 @@
-proxy:
-  # type: NodePort
-  http:
+controller:
+  service:
     enabled: true
-    nodePort: 32080
-  tls:
-    enabled: true
-    nodePort: 32443
+    # type: NodePort
+    type: LoadBalancer
+    externalTrafficPolicy: Local
+    nodePorts:
+      http: 32080
+      https: 32443
