--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,7 +1,7 @@
-environments:
-  development:
-    values:
-      - secrets/development.yaml
+# environments:
+#   development:
+#     values:
+#       - secrets/development.yaml
 ---
 repositories:
   # - name: bitnami
@@ -10,34 +10,34 @@ repositories:
     url: https://metallb.github.io/metallb
   - name: ingress-nginx
     url: https://kubernetes.github.io/ingress-nginx
-  - name: kong
-    url: https://charts.konghq.com
+  # - name: kong
+  #   url: https://charts.konghq.com
 
 releases:
-  - name: nginx-ingress
-    namespace: ingress-nginx
-    createNamespace: true
-    chart: ingress-nginx/ingress-nginx
+  # - name: nginx-ingress
+  #   namespace: ingress-nginx
+  #   createNamespace: true
+  #   chart: ingress-nginx/ingress-nginx
+  #   values:
+  #     - nginx-ingress/values.yaml
     # values:
-    #   - nginx-ingress/values.yaml
-    values:
-      - enabled: true
-        controller:
-          admissionWebhooks:
-            enabled: false
-          service:
-            externalTrafficPolicy: "Local"
-            nodePorts:
-              http: 32080
-              https: 32443
-          config:
-            use-gzip: true
-            load-balance: ewma
-            enable-real-ip: true
-            max-worker-connections: 0
-            ssl-redirect: false
-            force-ssl-redirect: false
-            proxy-body-size: 10m
+    #   - enabled: true
+    #     controller:
+    #       admissionWebhooks:
+    #         enabled: false
+    #       service:
+    #         externalTrafficPolicy: "Local"
+    #         nodePorts:
+    #           http: 32080
+    #           https: 32443
+    #       config:
+    #         use-gzip: true
+    #         load-balance: ewma
+    #         enable-real-ip: true
+    #         max-worker-connections: 0
+    #         ssl-redirect: false
+    #         force-ssl-redirect: false
+    #         proxy-body-size: 10m
   # kubectl patch svc nginx-ingress-ingress-nginx-controller -n ingress-nginx -p '{"spec":{"externalIPs":["192.168.100.51"]}}'
 
   # - name: metallb
@@ -45,8 +45,8 @@ releases:
   #   createNamespace: true
   #   chart: metallb/metallb
   #   version: 0.15.0
-  #   # values:
-  #   #   - ./metallb/values.yaml
+  #   values:
+  #     - ./metallb/values.yaml
   # alternative: kubectl patch svc kong-kong-proxy -n kong -p '{"spec":{"externalIPs":["192.168.100.51"]}}'
 
   # - name: kong
