--- a/microservices/nginx/templates/ingress.yaml
+++ b/microservices/nginx/templates/ingress.yaml
@@ -17,7 +17,7 @@ spec:
   - http:
       paths:
       - pathType: Prefix
-        path: /nginx
+        path: "/"
         backend:
           service:
             name: nginx-test
