--- a/microservices/nginx/templates/service.yaml
+++ b/microservices/nginx/templates/service.yaml
@@ -5,10 +5,12 @@ metadata:
   labels:
     app: nginx-test
 spec:
-  type: ClusterIP
+  # type: ClusterIP
+  type: LoadBalancer
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 80
-    name: http
+    protocol: TCP
   selector:
-    app: nginx-test
+    app.kubernetes.io/instance: nginx-test
